# tired

./: LICENSE  README.md  pyproject.toml
src/tired_MVERDUGO89/: tired.py
