[tool.poetry]
name = "tired_MVERDUGO89"
version = "0.0.1"
description = "A very tired package."
authors = ["marta verdugo <martapverdugo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
